test/classes/errors/nilability-return-yield/yield-unmanaged.good
yield-unmanaged.chpl:3: In iterator 'I':
yield-unmanaged.chpl:3: error: cannot yield 'unmanaged C?' when the declared return type is 'unmanaged C'
